--- a/TrackCTA/app/src/main/AndroidManifest.xml
+++ b/TrackCTA/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".StopsDisplayActivity"
+                  android:parentActivityName=".MainActivity"
+                  android:exported="false"/>
     </application>
 
 </manifest>
