logs stop_id for a given station in new activity

--- a/TrackCTA/app/src/main/AndroidManifest.xml
+++ b/TrackCTA/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         <activity android:name=".StopsDisplayActivity"
                   android:parentActivityName=".MainActivity"
                   android:exported="false"/>
+        <activity android:name=".ArrivalsActivity"
+                  android:exported="false"/>
     </application>
 
 </manifest>
