logs a stop's "staNm" field when ArrivalsActivity starts

--- a/TrackCTA/app/src/main/AndroidManifest.xml
+++ b/TrackCTA/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".StopsDisplayActivity"
+        <activity android:name=".StopsActivity"
                   android:parentActivityName=".MainActivity"
                   android:exported="false"/>
         <activity android:name=".ArrivalsActivity"
