--- a/TrackCTA/app/src/main/AndroidManifest.xml
+++ b/TrackCTA/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
                   android:exported="false"/>
         <activity android:name=".ArrivalsActivity"
                   android:exported="false"/>
+        <activity android:name=".VisualizerActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
