--- a/TrackCTA/app/src/main/AndroidManifest.xml
+++ b/TrackCTA/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Trax Chicago"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TrackCTA"
@@ -29,8 +29,6 @@
         <activity android:name=".StopsActivity"
                   android:exported="false"/>
         <activity android:name=".ArrivalsActivity"
-                  android:exported="false"/>
-        <activity android:name=".FollowTrainActivity"
                   android:exported="false"/>
         <activity android:name=".VisualizerActivity"
                   android:exported="false"/>
